chore : add writing text

--- a/1-drawing-functions.ipynb
+++ b/1-drawing-functions.ipynb
@@ -158,12 +158,107 @@
    "source": [
     "pts = np.array([[10, 5], [20, 30], [70, 20], [50, 10]], np.int32)\n",
     "pts = pts.reshape((-1, 1, 2))\n",
-    "image = cv2.polylines(image, [pts], True, (0, 255, 255))"
+    "image = cv2.polylines(image, [pts], False, (0, 255, 255))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imshow('image', image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding Text\n",
+    "\n",
+    "To write texts in images, we need the following:\n",
+    "\n",
+    "1. Text data to write\n",
+    "2. Coordinates of the text data (bottom-left is the start)\n",
+    "3. Font type\n",
+    "4. Font scale\n",
+    "5. Formatting such as color, thickness, lineType, etc. For our example, `lineType = cv2.LINE_AA`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        ...,\n",
+       "        [  0, 255,   0],\n",
+       "        [  0, 255,   0],\n",
+       "        [  0, 255,   0]],\n",
+       "\n",
+       "       [[255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        ...,\n",
+       "        [  0, 255,   0],\n",
+       "        [  0, 255,   0],\n",
+       "        [  0, 255,   0]],\n",
+       "\n",
+       "       [[255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        ...,\n",
+       "        [  0, 255,   0],\n",
+       "        [  0, 255,   0],\n",
+       "        [  0, 255,   0]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[  0,   0,   0],\n",
+       "        [  0,   0,   0],\n",
+       "        [  0,   0,   0],\n",
+       "        ...,\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0]],\n",
+       "\n",
+       "       [[  0,   0,   0],\n",
+       "        [  0,   0,   0],\n",
+       "        [  0,   0,   0],\n",
+       "        ...,\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0]],\n",
+       "\n",
+       "       [[  0,   0,   0],\n",
+       "        [  0,   0,   0],\n",
+       "        [  0,   0,   0],\n",
+       "        ...,\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0],\n",
+       "        [255,   0,   0]]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "cv2.putText(image, 'OpenCV', (10, 500), font, 4, (255, 255, 255), 2, cv2.LINE_AA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
