--- a/6-image-thresholding.ipynb
+++ b/6-image-thresholding.ipynb
@@ -7,7 +7,13 @@
     "Image Thresholding\n",
     "===\n",
     "\n",
-    "Change a color value based on specific threshold value."
+    "Change a color value based on specific threshold value.\n",
+    "\n",
+    "$$ px = \\begin{cases}\n",
+    "maxVal & x > thresh\\\\\n",
+    "0 & otherwise\n",
+    "\\end{cases}\n",
+    "$$"
    ]
   },
   {
@@ -21,14 +27,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simple Threshold"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv2.imread('figures/darth.JPG')\n",
+    "image = cv2.imread('figures/bookpage.jpg')\n",
     "\n",
-    "ret, threshold = cv2.threshold(image, 90, 255, cv2.THRESH_BINARY)\n",
+    "ret, threshold = cv2.threshold(image, 12, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "cv2.namedWindow('image', cv2.WINDOW_NORMAL)\n",
     "cv2.namedWindow('threshold', cv2.WINDOW_NORMAL)\n",
@@ -39,16 +52,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grayscale Threshold"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv2.imread('figures/darth.JPG')\n",
+    "image = cv2.imread('figures/bookpage.jpg')\n",
     "\n",
     "grayscaled = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "ret, threshold = cv2.threshold(grayscaled, 90, 255, cv2.THRESH_BINARY)\n",
+    "ret, threshold = cv2.threshold(grayscaled, 12, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "cv2.namedWindow('image', cv2.WINDOW_NORMAL)\n",
     "cv2.namedWindow('threshold', cv2.WINDOW_NORMAL)\n",
@@ -59,11 +79,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaussian Threshold"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "image = cv2.imread('figures/bookpage.jpg')\n",
+    "\n",
+    "grayscaled = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "ret, threshold = cv2.threshold(grayscaled, 12, 255, cv2.THRESH_BINARY)\n",
+    "gauss = cv2.adaptiveThreshold(grayscaled, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY, 115, 1)\n",
+    "\n",
+    "cv2.namedWindow('image', cv2.WINDOW_NORMAL)\n",
+    "cv2.namedWindow('threshold', cv2.WINDOW_NORMAL)\n",
+    "cv2.namedWindow('gauss', cv2.WINDOW_NORMAL)\n",
+    "cv2.imshow('image', grayscaled)\n",
+    "cv2.imshow('threshold', threshold)\n",
+    "cv2.imshow('gauss', gauss)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = cv2.imread('figures/death-star.jpg')\n",
+    "\n",
+    "cv2.imshow('image', image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = cv2.imread('figures/death-star.jpg')\n",
+    "image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "ret, threshold = cv2.threshold(image, 50, 255, cv2.THRESH_BINARY)\n",
+    "threshold = cv2.adaptiveThreshold(image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, cv2.THRESH_BINARY, 115, -1)\n",
+    "\n",
+    "cv2.namedWindow('image', cv2.WINDOW_NORMAL)\n",
+    "cv2.namedWindow('threshold', cv2.WINDOW_NORMAL)\n",
+    "cv2.imshow('image', image)\n",
+    "cv2.imshow('threshold', threshold)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
