--- a/8-morphological-transformation.ipynb
+++ b/8-morphological-transformation.ipynb
@@ -488,6 +488,61 @@
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "Isolate an object based on a color from a video (same with **4-changing-colorspace**), and use morphological transformations to improve the isolated object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    # take each frame\n",
+    "    _, frame = cap.read()\n",
+    "    \n",
+    "    # convert BGR to HSV\n",
+    "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "    \n",
+    "    # define the range of blue color in HSV\n",
+    "    lower_blue = np.array([110, 50, 50])\n",
+    "    upper_blue = np.array([130, 255, 255])\n",
+    "    \n",
+    "    # threshold the HSV image to get only blue colors\n",
+    "    mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
+    "    \n",
+    "    # bitwise-and the mask and the original image\n",
+    "    res = cv2.bitwise_and(frame, frame, mask=mask)\n",
+    "    \n",
+    "    kernel = np.ones((5, 5), np.uint8)\n",
+    "    erosion = cv2.erode(mask, kernel, iterations=1)\n",
+    "    dilation = cv2.dilate(mask, kernel, iterations=1)\n",
+    "    opening = cv2.morphologyEx(mask, cv2.MORPH_OPEN, kernel)\n",
+    "    closing = cv2.morphologyEx(mask, cv2.MORPH_CLOSE, kernel)\n",
+    "    \n",
+    "    cv2.imshow('frame', frame)\n",
+    "    cv2.imshow('mask', mask)\n",
+    "    cv2.imshow('res', res)\n",
+    "    cv2.imshow('eroded_mask', erosion)\n",
+    "    cv2.imshow('dilated_mask', dilation)\n",
+    "    cv2.imshow('opening', opening)\n",
+    "    cv2.imshow('closing', closing)\n",
+    "    \n",
+    "    k = cv2.waitKey(5)\n",
+    "    \n",
+    "    if k == 27:\n",
+    "        break\n",
+    "        \n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
