--- a/4-changing-colorspace.ipynb
+++ b/4-changing-colorspace.ipynb
@@ -44,8 +44,8 @@
     "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
     "    \n",
     "    # define the range of blue color in HSV\n",
-    "    lower_blue = np.array([0, 100, 100])\n",
-    "    upper_blue = np.array([10, 255, 255])\n",
+    "    lower_blue = np.array([110, 50, 50])\n",
+    "    upper_blue = np.array([130, 255, 255])\n",
     "    \n",
     "    # threshold the HSV image to get only blue colors\n",
     "    mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
@@ -120,6 +120,62 @@
    "metadata": {},
    "source": [
     "Now, we may use `[H-10, 100, 100]` and `[H+10, 255, 255]` as lower bound and upper bound respectively for red in HSV. But since we have `0` for the `H` value of red, we may use it as it is. However, red can also have a Hue value from 170-180."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "Extract multiple colors simultaneously."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    # take each frame\n",
+    "    _, frame = cap.read()\n",
+    "    \n",
+    "    # convert BGR to HSV\n",
+    "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "    \n",
+    "    # define the range of blue color in HSV\n",
+    "    lower_blue = np.array([110, 50, 50])\n",
+    "    upper_blue = np.array([130, 255, 255])\n",
+    "    \n",
+    "    # define the range of green color in HSV\n",
+    "    lower_green = np.array([50, 50, 120])\n",
+    "    upper_green = np.array([70, 255, 255])\n",
+    "    \n",
+    "    # threshold the HSV image to get only blue colors\n",
+    "    blue_mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
+    "    \n",
+    "    # threshold the HSV image to get only green colors\n",
+    "    green_mask = cv2.inRange(hsv, lower_green, upper_green)\n",
+    "    \n",
+    "    mask = blue_mask + green_mask\n",
+    "    \n",
+    "    # bitwise-and the mask and the original image\n",
+    "    res = cv2.bitwise_and(frame, frame, mask=mask)\n",
+    "    \n",
+    "    cv2.imshow('frame', frame)\n",
+    "    cv2.imshow('mask', mask)\n",
+    "    cv2.imshow('res', res)\n",
+    "    \n",
+    "    k = cv2.waitKey(5)\n",
+    "    \n",
+    "    if k == 27:\n",
+    "        break\n",
+    "        \n",
+    "cv2.destroyAllWindows()"
    ]
   }
  ],
