chore : add video release

--- a/4-changing-colorspace.ipynb
+++ b/4-changing-colorspace.ipynb
@@ -60,6 +60,7 @@
     "    k = cv2.waitKey(5)\n",
     "    \n",
     "    if k == 27:\n",
+    "        cap.release()\n",
     "        break\n",
     "        \n",
     "cv2.destroyAllWindows()"
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +174,7 @@
     "    k = cv2.waitKey(5)\n",
     "    \n",
     "    if k == 27:\n",
+    "        cap.release()\n",
     "        break\n",
     "        \n",
     "cv2.destroyAllWindows()"
@@ -195,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
