--- a/8-morphological-transformation.ipynb
+++ b/8-morphological-transformation.ipynb
@@ -499,8 +499,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "\n",
@@ -539,6 +541,7 @@
     "    k = cv2.waitKey(5)\n",
     "    \n",
     "    if k == 27:\n",
+    "        cap.release()\n",
     "        break\n",
     "        \n",
     "cv2.destroyAllWindows()"
@@ -561,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
