fix : add correction shape

--- a/Fashion-MNIST.ipynb
+++ b/Fashion-MNIST.ipynb
@@ -12,6 +12,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|label|class|\n",
+    "|-----|-----|\n",
+    "|0|T-shirt/top|\n",
+    "|1|Trouser|\n",
+    "|2|Pullover|\n",
+    "|3|Dress|\n",
+    "|4|Coat|\n",
+    "|5|Sandal|\n",
+    "|6|Shirt|\n",
+    "|7|Sneaker|\n",
+    "|8|Bag|\n",
+    "|9|Ankle boot|"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -26,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cells = [np.hsplit(row, 28) for row in np.vsplit(fashion, (28 * 3))]"
+    "cells = [np.hsplit(row, 30) for row in np.vsplit(fashion, 30)]"
    ]
   },
   {
@@ -55,7 +73,7 @@
    "outputs": [],
    "source": [
     "k = np.arange(10)\n",
-    "train_labels = np.repeat(k, 45)[:, np.newaxis]\n",
+    "train_labels = np.repeat(k, 42)[:, np.newaxis]\n",
     "test_labels = train_labels.copy()"
    ]
   },
@@ -106,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy : 34.666666666666664\n"
+      "accuracy : 69.52380952380952\n"
      ]
     }
    ],
