--- a/1-introduction-to-numpy.ipynb
+++ b/1-introduction-to-numpy.ipynb
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.array([[1,2],[3,4]])\n",
+    "x = np.array([[1, 2],[3, 4]])\n",
     "\n",
     "print(np.sum(x))  # Compute sum of all elements; prints \"10\"\n",
     "print(np.sum(x, axis=0))  # Compute sum of each column; prints \"[4 6]\"\n",
