chore : add blend exercise

--- a/3-core-operations.ipynb
+++ b/3-core-operations.ipynb
@@ -963,6 +963,38 @@
     "        cv2.destroyAllWindows()\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise on Image Blending"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bernie = cv2.imread('./figures/bernie.jpg')\n",
+    "\n",
+    "cap = cv2.VideoCapture(-1)\n",
+    "\n",
+    "while True:\n",
+    "    _, frame = cap.read()\n",
+    "    rows, cols, _ = frame.shape\n",
+    "    bernie = cv2.resize(bernie, (int(cols), int(rows)))\n",
+    "    blend = cv2.addWeighted(frame, 0.8, bernie, 0.2, 0)\n",
+    "    cv2.imshow('blend', blend)\n",
+    "    \n",
+    "    k = cv2.waitKey(1)\n",
+    "    \n",
+    "    if k == ord('q') or k == 27:\n",
+    "        cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
