chore : add camera filter

--- a/3-core-operations.ipynb
+++ b/3-core-operations.ipynb
@@ -995,6 +995,40 @@
     "        cv2.destroyAllWindows()\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Camera Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_invert(frame):\n",
+    "    return cv2.bitwise_not(frame)\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "while True:\n",
+    "    _, frame = cap.read()\n",
+    "    \n",
+    "    invert = apply_invert(frame)\n",
+    "    \n",
+    "    cv2.imshow('frame', frame)\n",
+    "    cv2.imshow('invert', invert)\n",
+    "    \n",
+    "    k = cv2.waitKey(1)\n",
+    "    \n",
+    "    if k == ord('q') or k == 27:\n",
+    "        cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
