chore : add executed notebook

--- a/notebooks/1-introduction-to-numpy.ipynb
+++ b/notebooks/1-introduction-to-numpy.ipynb
@@ -20,9 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "(3,)\n",
+      "1 2 3\n",
+      "[5 2 3]\n",
+      "(2, 3)\n",
+      "1 2 4\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -47,9 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]]\n",
+      "[[1. 1.]]\n",
+      "[[7 7]\n",
+      " [7 7]]\n",
+      "[[1. 0.]\n",
+      " [0. 1.]]\n",
+      "[[0.55743389 0.28631502]\n",
+      " [0.43015892 0.28667998]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.zeros((2, 2))   # Create an array of all zeros\n",
     "print(a)              # Prints \"[[ 0.  0.]\n",
@@ -80,9 +109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "77\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the following rank 2 array with shape (3, 4)\n",
     "# [[ 1  2  3  4]\n",
@@ -112,9 +150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n",
+      "float64\n",
+      "int64\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([1, 2])   # Let numpy choose the datatype\n",
     "print(x.dtype)         # Prints \"int64\"\n",
@@ -135,9 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 6.  8.]\n",
+      " [10. 12.]]\n",
+      "[[ 6.  8.]\n",
+      " [10. 12.]]\n",
+      "[[-4. -4.]\n",
+      " [-4. -4.]]\n",
+      "[[-4. -4.]\n",
+      " [-4. -4.]]\n",
+      "[[ 5. 12.]\n",
+      " [21. 32.]]\n",
+      "[[ 5. 12.]\n",
+      " [21. 32.]]\n",
+      "[[0.2        0.33333333]\n",
+      " [0.42857143 0.5       ]]\n",
+      "[[0.2        0.33333333]\n",
+      " [0.42857143 0.5       ]]\n",
+      "[[1.         1.41421356]\n",
+      " [1.73205081 2.        ]]\n",
+      "3\n",
+      "[1 1]\n",
+      "[1 1]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([[1, 2], [3, 4]], dtype=np.float64)\n",
     "y = np.array([[5, 6], [7, 8]], dtype=np.float64)\n",
@@ -190,9 +266,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "219\n",
+      "219\n",
+      "[29 67]\n",
+      "[29 67]\n",
+      "[[19 22]\n",
+      " [43 50]]\n",
+      "[[19 22]\n",
+      " [43 50]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([[1, 2], [3, 4]])\n",
     "y = np.array([[5, 6], [7, 8]])\n",
@@ -224,9 +315,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[4 6]\n",
+      "[3 7]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([[1, 2],[3, 4]])\n",
     "\n",
@@ -246,9 +347,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "5\n",
+      "10\n",
+      "12\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 4, 5, 10, 12, 15], int)\n",
     "\n",
@@ -265,9 +379,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: [3 0 3 7 7]\n",
+      "b: [6 3 2 5 8]\n",
+      "[False False  True  True False]\n",
+      "[ True  True False False  True]\n",
+      "[False False False False False]\n",
+      "[False False  True  True False]\n",
+      "[ True  True False False  True]\n",
+      "[ True  True  True  True  True]\n",
+      "[False False False False False]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create arrays with random integer values\n",
     "a = np.random.randint(10, size=(5))\n",
