chore : add executed notebook

--- a/notebooks/2-image-loading-and-saving.ipynb
+++ b/notebooks/2-image-loading-and-saving.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
     "# second argument is the color of the image\n",
     "    # cv2.IMREAD_COLOR loads a color image\n",
     "    # cv2.IMREAD_GRAYSCALE loads image in grayscale\n",
-    "image = cv2.imread('./figures/bernie.jpg', cv2.IMREAD_COLOR)"
+    "image = cv2.imread('../assets/bernie.jpg', cv2.IMREAD_COLOR)"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "image = cv2.imread('./figures/bernie.jpg', cv2.IMREAD_GRAYSCALE)\n",
+    "image = cv2.imread('../assets/bernie.jpg', cv2.IMREAD_GRAYSCALE)\n",
     "cv2.imwrite('bernie_grayscale.jpg', image)"
    ]
   },
@@ -115,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv2.imread('./figures/bernie.jpg', cv2.IMREAD_GRAYSCALE)\n",
+    "image = cv2.imread('../assets/bernie.jpg', cv2.IMREAD_GRAYSCALE)\n",
     "cv2.imshow('image', image)\n",
     "\n",
     "k = cv2.waitKey(0)\n",
@@ -144,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,52 +174,6 @@
     "        break\n",
     "        \n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trackbar"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def nothing(x):\n",
-    "    pass\n",
-    "\n",
-    "image = np.zeros((300, 300, 3), np.uint8)\n",
-    "cv2.namedWindow('image')\n",
-    "\n",
-    "cv2.createTrackbar('R', 'image', 0, 255, nothing)\n",
-    "cv2.createTrackbar('G', 'image', 0, 255, nothing)\n",
-    "cv2.createTrackbar('B', 'image', 0, 255, nothing)\n",
-    "\n",
-    "switch_text = '0 : OFF \\n1 : ON'\n",
-    "cv2.createTrackbar(switch_text, 'image', 0, 1, nothing)\n",
-    "\n",
-    "while True:\n",
-    "    \n",
-    "    cv2.imshow('image', image)\n",
-    "    \n",
-    "    if cv2.waitKey(1) == 27:\n",
-    "        break\n",
-    "\n",
-    "    red = cv2.getTrackbarPos('R', 'image')\n",
-    "    green = cv2.getTrackbarPos('G', 'image')\n",
-    "    blue = cv2.getTrackbarPos('B', 'image')\n",
-    "    switch = cv2.getTrackbarPos(switch_text, 'image')\n",
-    "    \n",
-    "    if switch == 0:\n",
-    "        image[:] = 0\n",
-    "    else:\n",
-    "        image[:] = [blue, green, red]\n",
-    "    \n",
     "cv2.destroyAllWindows()"
    ]
   }
