chore : finish notebook

--- a/notebooks/3-core-operations.ipynb
+++ b/notebooks/3-core-operations.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "image = cv2.imread('./figures/bernie.jpg')\n",
+    "image = cv2.imread('../assets/bernie.jpg')\n",
     "\n",
     "print(image.shape)"
    ]
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(249, 223, 410, 481)\n"
+      "(261, 285, 344, 376)\n"
      ]
     }
    ],
@@ -422,8 +422,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bernie = cv2.imread('./figures/bernie.jpg')\n",
-    "howie = cv2.imread('./figures/howie.png')"
+    "bernie = cv2.imread('../assets/bernie.jpg')\n",
+    "howie = cv2.imread('../assets/howie.png')"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "outputs": [],
    "source": [
     "# load the logo to use \n",
-    "big_bang = cv2.imread('./figures/big-bang.jpg')"
+    "big_bang = cv2.imread('../assets/big-bang.jpg')"
    ]
   },
   {
@@ -657,19 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Drawing Functions in OpenCV\n",
-    "===\n",
-    "\n",
-    "In which we learn to draw geometric shapes with OpenCV. We shalle learn to do so through the following functions: `cv2.line()`, `cv2.circle()`, `cv2.rectangle()`, `cv2.ellipse()`, `cv2.putText()`, etc."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drawing a Line\n",
-    "\n",
-    "To draw a line, we shall pass a starting and an ending coordinates of the line. We shall create an image, and draw a blue line on it from top-left to bottom-right corners."
+    "## Exercise on Drawing Functions"
    ]
   },
   {
@@ -678,259 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a black image\n",
-    "image = np.zeros((512, 512, 3), np.uint8)\n",
-    "\n",
-    "\n",
-    "# draw a diagonal blue line with thickness of 5px\n",
-    "image = cv2.line(image, (0, 0), (511, 511), (255, 0, 0), 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('image', image)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drawing a Rectangle\n",
-    "\n",
-    "To draw a rectangle, we need top-left corner and bottom-right of rectangle. We shall draw a green rectangle at the top-right corner of our previous image."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = cv2.rectangle(image, (384, 0), (510, 128), (0, 255, 0), 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('image', image)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drawing a Circle\n",
-    "\n",
-    "To draw a circle, we need its center coordinates and its radius. We shall draw a circle inside the rectangle drawn above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = cv2.circle(image, (447, 63), 63, (0, 0, 255), -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('image', image)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drawing an Ellipse\n",
-    "\n",
-    "To draw an ellipse, we need to pass several arguments.\n",
-    "\n",
-    "1. Center location (x, y)\n",
-    "2. Axes lengths (major axis length, minor axis length)\n",
-    "3. Angle of rotation of the ellipse in anti-clockwise direction, `angle`.\n",
-    "4. `startAngle` and `endAngle` which denote the starting and ending of ellipse arc measured in clockwise direction from major axis, i.e. giving values 0 and 360 shall give a full ellipse.\n",
-    "\n",
-    "For our example, we shall draw a half ellipse at the center of the image."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = cv2.ellipse(image, (256, 256), (100, 50), 0, 0, 180, 255, -1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('image', image)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drawing a Polygon\n",
-    "\n",
-    "To draw a polygon, we need the coordinates of the vertices. We make those points into an array of shape `ROWSx1x2` where `ROWS` are number of vertices, and it should be of type `int32`. For our example, we draw a small polygon with four vertices in yellow color."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pts = np.array([[10, 5], [20, 30], [70, 20], [50, 10]], np.int32)\n",
-    "pts = pts.reshape((-1, 1, 2))\n",
-    "image = cv2.polylines(image, [pts], False, (0, 255, 255))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('image', image)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Adding Text\n",
-    "\n",
-    "To write texts in images, we need the following:\n",
-    "\n",
-    "1. Text data to write\n",
-    "2. Coordinates of the text data (bottom-left is the start)\n",
-    "3. Font type\n",
-    "4. Font scale\n",
-    "5. Formatting such as color, thickness, lineType, etc. For our example, `lineType = cv2.LINE_AA`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        ...,\n",
-       "        [  0, 255,   0],\n",
-       "        [  0, 255,   0],\n",
-       "        [  0, 255,   0]],\n",
-       "\n",
-       "       [[255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        ...,\n",
-       "        [  0, 255,   0],\n",
-       "        [  0, 255,   0],\n",
-       "        [  0, 255,   0]],\n",
-       "\n",
-       "       [[255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        ...,\n",
-       "        [  0, 255,   0],\n",
-       "        [  0, 255,   0],\n",
-       "        [  0, 255,   0]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[  0,   0,   0],\n",
-       "        [  0,   0,   0],\n",
-       "        [  0,   0,   0],\n",
-       "        ...,\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0]],\n",
-       "\n",
-       "       [[  0,   0,   0],\n",
-       "        [  0,   0,   0],\n",
-       "        [  0,   0,   0],\n",
-       "        ...,\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0]],\n",
-       "\n",
-       "       [[  0,   0,   0],\n",
-       "        [  0,   0,   0],\n",
-       "        [  0,   0,   0],\n",
-       "        ...,\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0],\n",
-       "        [255,   0,   0]]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "cv2.putText(image, 'OpenCV', (10, 500), font, 4, (255, 255, 255), 2, cv2.LINE_AA)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.imshow('image', image)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise on Drawing Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "big_bang = cv2.imread('./figures/big-bang.jpg')\n",
+    "big_bang = cv2.imread('../assets/big-bang.jpg')\n",
     "\n",
     "big_bang = cv2.resize(big_bang, (int(big_bang.shape[1] * 0.25), int(big_bang.shape[0] * 0.25)))\n",
     "\n",
@@ -954,7 +690,7 @@
     "    dst = cv2.add(frame_bg, bigbang_fg)\n",
     "    frame[0:rows, 0:cols] = dst\n",
     "    \n",
-    "    cv2.imshow('frame', frame)\n",
+    "    cv2.imshow('bitwise', frame)\n",
     "    \n",
     "    k = cv2.waitKey(1)\n",
     "    \n",
@@ -973,11 +709,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bernie = cv2.imread('./figures/bernie.jpg')\n",
+    "bernie = cv2.imread('../assets/bernie.jpg')\n",
     "\n",
     "cap = cv2.VideoCapture(-1)\n",
     "\n",
@@ -1005,25 +741,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_invert(frame):\n",
-    "    return cv2.bitwise_not(frame)\n",
-    "\n",
+    "# create VideoCapture object for webcam\n",
     "cap = cv2.VideoCapture(0)\n",
     "\n",
+    "def apply_invert(frame):\n",
+    "    # return inverted image\n",
+    "    return cv2.bitwise_not(frame)\n",
+    "\n",
+    "def apply_sepia(frame, intensity=0.5):\n",
+    "    blue = 20\n",
+    "    green = 66\n",
+    "    red = 112\n",
+    "    # use the sepia profile as overlay\n",
+    "    frame = apply_color_overlay(frame, intensity=intensity, blue=blue, green=green, red=red)\n",
+    "    return frame\n",
+    "\n",
+    "def verify_alpha_channel(frame):\n",
+    "    try:\n",
+    "        frame.shape[3]\n",
+    "    except IndexError:\n",
+    "        # convert the frame to have an alpha channel\n",
+    "        frame = cv2.cvtColor(frame, cv2.COLOR_BGR2BGRA)\n",
+    "    return frame\n",
+    "\n",
+    "def apply_color_overlay(frame, intensity=0.5, blue=0, green=0, red=0):\n",
+    "    frame = verify_alpha_channel(frame)\n",
+    "    frame_height, frame_width, frame_channel = frame.shape\n",
+    "    sepia_bgra = (blue, green, red, 1)\n",
+    "\n",
+    "    # create overlay based on color profile from (blue, green, red)\n",
+    "    overlay = np.full((frame_height, frame_width, 4), sepia_bgra, dtype='uint8')\n",
+    "\n",
+    "    # add sepia overlay on frame\n",
+    "    frame = cv2.addWeighted(overlay, intensity, frame, 1.0, 0)\n",
+    "    frame = cv2.cvtColor(frame, cv2.COLOR_BGRA2BGR)\n",
+    "    return frame\n",
+    "\n",
+    "def alpha_blend(frame_1, frame_2, mask):\n",
+    "    # isolate the white parts\n",
+    "    alpha = mask / 255.0\n",
+    "    \n",
+    "    # blur out the background, with object of focus being clear\n",
+    "    blended = cv2.convertScaleAbs(frame_1 * (1 - alpha) + (frame_2 * alpha))\n",
+    "    \n",
+    "    return blended\n",
+    "\n",
+    "def apply_portrait_mode(frame):\n",
+    "    frame = verify_alpha_channel(frame)\n",
+    "    \n",
+    "    # convert to grayscale\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # create a mask that is based on threshold of 120\n",
+    "    # that is, if a pixel reaches or is greater than 120,\n",
+    "    # modify it to have 255\n",
+    "    _, mask = cv2.threshold(gray, 120, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "    # modify the mask to have an alpha channel\n",
+    "    mask = cv2.cvtColor(mask, cv2.COLOR_GRAY2BGRA)\n",
+    "    \n",
+    "    # perform gaussian blurring with (21, 21) kernel\n",
+    "    # 0 stddev\n",
+    "    blurred = cv2.GaussianBlur(frame, (21, 21), 0)\n",
+    "\n",
+    "    # blend the original frame with the blurred frame\n",
+    "    # with mask to use for isolating the object of focus\n",
+    "    blended = alpha_blend(frame, blurred, mask)\n",
+    "    \n",
+    "    # convert frame back to BGR, i.e. w/o alpha\n",
+    "    frame = cv2.cvtColor(blended, cv2.COLOR_BGRA2BGR)\n",
+    "    return frame\n",
+    "\n",
     "while True:\n",
-    "    _, frame = cap.read()\n",
-    "    \n",
+    "    ret, frame = cap.read()\n",
+    "\n",
     "    invert = apply_invert(frame)\n",
-    "    \n",
+    "    sepia = apply_sepia(frame)\n",
+    "    redish_color = apply_color_overlay(frame, intensity=0.5, red=230, blue=10)\n",
+    "    portrait_mode = apply_portrait_mode(frame)\n",
+    "\n",
     "    cv2.imshow('frame', frame)\n",
     "    cv2.imshow('invert', invert)\n",
-    "    \n",
+    "    cv2.imshow('sepia', sepia)\n",
+    "    cv2.imshow('redish_color', redish_color)\n",
+    "    cv2.imshow('portrait_mode', portrait_mode)\n",
+    "\n",
     "    k = cv2.waitKey(1)\n",
-    "    \n",
+    "\n",
     "    if k == ord('q') or k == 27:\n",
     "        cap.release()\n",
     "        cv2.destroyAllWindows()\n",
