chore : add updated link to classifier.py

--- a/notebooks/6-real-time-image-classifier.ipynb
+++ b/notebooks/6-real-time-image-classifier.ipynb
@@ -103,7 +103,7 @@
    "source": [
     "## OpenCV\n",
     "\n",
-    "Use the [classifier](https://tinyurl.com/ycgmv4l9) we wrote that uses OpenCV for capturing video frames."
+    "Use the [classifier](https://github.com/AFAgarap/opencv-python-training/blob/master/assets/classifier.py) we wrote that uses OpenCV for capturing video frames."
    ]
   }
  ],
@@ -123,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
